# cmake-demo

./: .gitignore  CMakeLists.txt  README.md  curltest.cpp  main.cpp  mintest.cpp  opencvtest.cpp  spdlogtest.cpp
add_lib/: CMakeLists.txt
cmake/: FindMIN.cmake  spdlog.cmake  spdlog2.cmake
max_lib/: max.cpp
min_lib/: CMakeLists.txt  min.cpp
